// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderButtonSignIn - Snapshots > matches snapshot for default HeaderButtonSignIn 1`] = `
<button
  class="gap-2"
  data-testid="header-sign-in-btn"
  data-variant="secondary"
  id="header-sign-in-btn"
>
  <span
    class="size-4"
    data-testid="user-round-plus-icon"
  />
  New here?
</button>
`;

exports[`HeaderButtonSignIn - Snapshots > matches snapshot with custom className 1`] = `
<button
  class="custom-class"
  data-testid="header-sign-in-btn"
  data-variant="secondary"
  id="header-sign-in-btn"
>
  <span
    class="size-4"
    data-testid="user-round-plus-icon"
  />
  New here?
</button>
`;
